# E2E_Flight

model/: uav_obstacle.stl
scripts/: xtdrone_run_vio.sh
src/VINS-Fusion/config/xtdrone_sitl/: px4_sitl_stereo_imu_config.yaml
src/data_collection/: CMakeLists.txt  package.xml
src/data_collection/include/data_collection/: data_collection_manager.h
src/data_collection/src/: data_collection_manager.cpp  data_collection_node.cpp
src/ego_planner/plan_manage/launch/: single_uav.launch
